RESOLVED FIXED232756
WTR::AccessibilityController::focusedElement() cannot get the focused object via WKAccessibilityFocusedObject in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=232756
Summary WTR::AccessibilityController::focusedElement() cannot get the focused object ...
Andres Gonzalez
Reported 2021-11-05 08:04:08 PDT
WTR::AccessibilityController::focusedElement() cannot get the focused object via WKAccessibilityFocusedObject in isolated tree mode.
Attachments
Patch (19.61 KB, patch)
2021-11-05 08:44 PDT, Andres Gonzalez
no flags
Patch (20.22 KB, patch)
2021-11-05 13:17 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2021-11-05 08:04:22 PDT
Andres Gonzalez
Comment 2 2021-11-05 08:44:48 PDT
Andres Gonzalez
Comment 3 2021-11-05 13:17:06 PDT
EWS
Comment 4 2021-11-08 05:56:45 PST
Committed r285399 (243956@main): <https://commits.webkit.org/243956@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443429 [details].
Ross Kirsling
Comment 5 2021-11-08 11:31:11 PST
!ENABLE(ACCESSIBILITY) is broken as of this patch; landing a fix as bug 232826.
Note You need to log in before you can comment on or make changes to this bug.