WTR::AccessibilityController::focusedElement() cannot get the focused object via WKAccessibilityFocusedObject in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=232756 <rdar://problem/85069882>

Reviewed by Chris Fleizach.

WTR::AccessibilityController::focusedElement() was getting the focused
object from WKAccessibilityFocusedObject, which has to run on the main
thread. WKAccessibilityFocusedObject was in turn calling AXObjectCache::
focusedUIElementForPage that tried to return the isolated focused
object. The problem with this is that the isolated focused object can
only be retrieved on the secondary thread.
The solution in this patch is to retrieve the focused object from the
root object as an AT client would do.
Source/WebCore:

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::focusedObjectForPage):
(WebCore::AXObjectCache::isolatedTreeFocusedObject): Deleted, not needed any more.
(WebCore::AXObjectCache::focusedUIElementForPage): Deleted, using focusedObjectForPage instead.
* accessibility/AXObjectCache.h:
Moved the following inlines out of the class declaration.
(WebCore::AXObjectCache::accessibilityEnhancedUserInterfaceEnabled):
(WebCore::AXObjectCache::~AXObjectCache):
(WebCore::AXObjectCache::focusedObjectForPage):
(WebCore::AXObjectCache::enableAccessibility):
(WebCore::AXObjectCache::disableAccessibility):
(WebCore::AXObjectCache::setEnhancedUserInterfaceAccessibility):
(WebCore::AXObjectCache::accessibilityEnabled):
(WebCore::AXObjectCache::focusedUIElementForPage): Deleted.
* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper accessibilityFocusedUIElement]): Code cleanup.
* accessibility/win/AXObjectCacheWin.cpp:
(WebCore::AXObjectCache::platformHandleFocusedUIElementChanged):

Source/WebKit:

* WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
(WKAccessibilityFocusedObject):
Now uses AXObjectCache::focusedObejctForPage().

Tools:

Added AccessibilityUIElement::focusedElement in order to retrieve the
focused object from the root object.

* WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:
(WTR::AccessibilityController::focusedElement):
* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.cpp:
(WTR::AccessibilityUIElement::focusedElement const):
* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
* WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
(WTR::AccessibilityUIElement::focusedElement const):
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::focusedElement const):



Canonical link: https://commits.webkit.org/243956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285399 268f45cc-cd09-0410-ab3c-d52691b4dbfc